clean up files and add image folder for src

--- a/src/style.css
+++ b/src/style.css
@@ -14,8 +14,8 @@ main {
 .header {
   display: flex;
   align-items: center;
-  height: 65px;
-  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
+  height: 100px;
+  background: linear-gradient(90deg, #465945 1.18%, #b2beb5 100%);
   color: white;
   padding: 20px;
 }
@@ -27,11 +27,12 @@ main {
 
 .header--title {
   font-size: 1.25rem;
+  margin-left: 1rem;
   margin-right: auto;
 }
 
 .header--project {
-  font-size: 0.75rem;
+  font-size: 1rem;
   font-weight: 500;
 }
 
@@ -53,7 +54,7 @@ main {
   grid-column: 1 / -1;
   font-family: "Karla", sans-serif;
   border-radius: 5px;
-  background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
+  background: linear-gradient(90.41deg, #354230 1.14%, #4a646c 100%);
   color: white;
   border: none;
   cursor: pointer;
