--- a/src/style.css
+++ b/src/style.css
@@ -14,8 +14,8 @@ main {
 .header {
   display: flex;
   align-items: center;
-  height: 100px;
-  background: linear-gradient(90deg, #465945 1.18%, #b2beb5 100%);
+  height: 90px;
+  background: linear-gradient(90deg, #0c4327 1.18%, #06c730 100%);
   color: white;
   padding: 20px;
 }
@@ -26,8 +26,7 @@ main {
 }
 
 .header--title {
-  font-size: 1.25rem;
-  margin-left: 1rem;
+  font-size: 2rem;
   margin-right: auto;
 }
 
@@ -48,19 +47,53 @@ main {
   border-radius: 5px;
   border: 1px solid #d5d4d8;
   text-indent: 5px;
+  height: 45px;
+  font-size: 1rem;
 }
 
 .form--button {
   grid-column: 1 / -1;
   font-family: "Karla", sans-serif;
   border-radius: 5px;
-  background: linear-gradient(90.41deg, #354230 1.14%, #4a646c 100%);
+  background: linear-gradient(90.41deg, #16644a 1.14%, #56f4bc 100%);
   color: white;
   border: none;
   cursor: pointer;
+  height: 45px;
+  font-size: 1rem;
+}
+
+.meme {
+  position: relative;
 }
 
 .meme--image {
   max-width: 100%;
   border-radius: 3px;
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+    -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000,
+    2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
